# Senior_Design_IRLTSPICE

./: .gitignore  KiCad_Scheme.kicad_prl  KiCad_Scheme.kicad_pro  KiCad_Scheme.kicad_sch  README.md  sym-lib-table  untitled.kicad_sch
.github/workflows/: build-multi-platform.yml
firmware/: platformio.ini
firmware/include/: bruz200.h  cd22m.h  init.h  main.h  mcp4241.h  mt8816.h  shift_registers.h  uart_bytes.h
firmware/src/: bruz200.c  cd22m.c  init.c  main.c  mcp4241.c  mt8816.c  shift_registers.c
hardware/SeniorDesignFP.pretty/: CAP_EEFK_C_PAN.kicad_mod  IND_4532-WE-PD2_WRE-L.kicad_mod  PLCC44_16P66X16P66_INR-M-BACKSIDE.kicad_mod  PLCC44_16P66X16P66_INR-M.kicad_mod  PurdueECE.kicad_mod  QFP80P1200X1200X120-44N.kicad_mod  SOP65P640X120-24N.kicad_mod  TPS55285.kicad_mod
hardware/SignleCellBoard/: SignleCellBoard-B_Cu.gbr  SignleCellBoard-B_Mask.gbr  SignleCellBoard-B_Silkscreen.gbr  SignleCellBoard-Edge_Cuts.gbr  SignleCellBoard-F_Cu.gbr  SignleCellBoard-F_Mask.gbr  SignleCellBoard-F_Silkscreen.gbr  SignleCellBoard-NPTH.drl  SignleCellBoard-PTH.drl  SignleCellBoard-job.gbrjob  SignleCellBoard.kicad_pcb  SignleCellBoard.kicad_pro  SignleCellBoard.kicad_sch  fp-lib-table  untitled.kicad_sch
hardware/crossbar-fixer/: crossbar-fixer.kicad_pcb  crossbar-fixer.kicad_pro  crossbar-fixer.kicad_sch  sym-lib-table
hardware/main-board/: MainBoard.csv  MainBoard.kicad_dru  MainBoard.kicad_pcb  MainBoard.kicad_prl  MainBoard.kicad_pro  MainBoard.kicad_sch  PowerCircuit.kicad_sch  _autosave-MainBoard.kicad_sch  fp-info-cache  fp-lib-table  standard_cell.kicad_sch  stm_controls.kicad_sch
hardware/syms/: SeniorDesignSyms.bak  SeniorDesignSyms.kicad_sym
software/irlc/: .pre-commit-config.yaml  CMakeLists.txt  README.md
software/irlc/include/core/: board_info.hpp  compiler.hpp  debug.hpp  emit.hpp  netlist.hpp  numbers.hpp  parse.hpp  route.hpp  routing.hpp  verify.hpp
software/irlc/include/util/: boost_util.hpp  macros.hpp
software/irlc/src/: main.cpp
software/irlc/src/core/: board_info.cpp  compiler.cpp  debug.cpp  emit.cpp  numbers.cpp  parse_eechema.cpp  parse_spice.cpp  route.cpp  verify.cpp
software/irlc/tests/: CMakeLists.txt  test_boost.cpp  test_numbers.cpp  test_parsers.cpp  test_routing.cpp
software/irlc/tests/data/: ExampleKicad.xml  User.spice  User2.spice  User_BJT.cir
